--- a/src/LarpManager/Views/admin/groupe/detail.twig
+++ b/src/LarpManager/Views/admin/groupe/detail.twig
@@ -24,7 +24,7 @@
 	    	<div class="list-group">
 	    		
 	    		<div class="list-group-item">
-		    		<h4 class="list-group-item-heading">Description</h4>
+		    		<h4 class="list-group-item-heading">Description <small>(Visible par tous)</small></h4>
     				<p class="list-group-item-text">
     				{% if not groupe.description %}
     					<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
@@ -33,7 +33,34 @@
     					{{ groupe.description|markdown }}
     				{% endif %}
     				</p>
-	    		</div>
+   	    		</div>
+	
+				{% if not groupe.background %}
+					<div class="list-group-item">
+	    				<h4 class="list-group-item-heading">Background</h4>
+	    				<p class="list-group-item-text">
+	    					<a href="{{ path(groupe.background.add, {'index': groupe.id}) }}">Saisir le background</a>
+	    				</p>
+	    			</div>
+				{% else %}    			
+		    		<div class="list-group-item">
+		    			<h4 class="list-group-item-heading">Background</h4>
+		    			<p class="list-group-item-text">Visible par les membres du groupe</p>
+		    			<p class="list-group-item-text">
+		    				{{ groupe.background.public|markdown }}
+		    			</p>
+		    			<p class="list-group-item-text">Visible par le chef de groupe</p>
+		    			<p class="list-group-item-text">
+		    				{{ groupe.background.owner|markdown }}
+	    				</p>
+	    				<p class="list-group-item-text">Visible uniquement par les scenaristes</p>
+		    			<p class="list-group-item-text">
+		    				{{ groupe.background.private|markdown }}
+	    				</p>
+	    					<a href="{{ path(groupe.background.update, {'index': groupe.id}) }}">Modifier le background</a>
+	    				</p>
+		    		</div>
+		    	{% endif %}
 	    			
 	    		<div class="list-group-item">
 	    			<h4 class="list-group-item-heading">Territoire</h4>
@@ -131,6 +158,7 @@
 					<p class="list-group-item-text">
 						{{ groupe.gns|join(', ') }}
 					</p>
+				</div>
     				    				
 
 	  			<div class="list-group-item">
