--- a/src/LarpManager/Views/personnage/competence.twig
+++ b/src/LarpManager/Views/personnage/competence.twig
@@ -20,7 +20,7 @@
 					<li class="list-group-item">Vous disposez de <strong>{{ personnage.xp }}</strong> Points d'expériences.</li>
 					<li class="list-group-item">Vos compétences favorites sont : {{ personnage.classe.competenceFamilyFavorites|join(', ') }}</li>
 					<li class="list-group-item">Vos compétences normales sont : {{ personnage.classe.competenceFamilyNormales|join(', ') }}</li>
-					<li class="list-group-item">Les autres compétences sont méconnue</li>
+					<li class="list-group-item">Les autres compétences sont méconnues</li>
 				</ul> 
 		
 				{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
