Gestion des backgrounds pour les groupes. Ajout d'un raccourci pour modifier l'expérience des personnages à partir de la vue orga d'un groupe.

--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -44,7 +44,7 @@
 						<li><a href="{{ path('religion') }}">Religions</a></li>
 						<li><a href="{{ path('religion.level') }}">Fanatisme</a></li>
 						<li><a href="{{ path('statistique') }}">Statistiques</a></li>
-						
+						<li><a href="{{ path('background.list') }}">Backgrounds</a></li>
 					</ul>
 				</li>
 			{% endif %}
