--- a/src/LarpManager/Views/personnage/fragment/list_competence.twig
+++ b/src/LarpManager/Views/personnage/fragment/list_competence.twig
@@ -1,6 +1,6 @@
 <ul class="list-group">
 
-	<a href="{{ path('personnage.competence.add',{'index':personnage.id}) }}" class="list-group-item active">
+	<a href="{{ path('personnage.competence.add',{'personnage':personnage.id}) }}" class="list-group-item active">
 		<span class="badge"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></span>
 		<h4 class="list-group-item-heading">Acheter une compétence</h4>
 	</a>
