--- a/src/LarpManager/Views/admin/groupe/detail.twig
+++ b/src/LarpManager/Views/admin/groupe/detail.twig
@@ -12,14 +12,14 @@
 	
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-xs-12 col-md-8">
+		<div class="col-xs-12 col-md-6">
 		
 						
 			<div class="well well-sm bs-component">
 				<h4>
 					{{ groupe.numero|default('?') }} - {{ groupe.nom }}
 				</h4>
-			</div>
+			</div>			
 		  						    		
 	    	<div class="list-group">
 	    		
@@ -34,34 +34,7 @@
     				{% endif %}
     				</p>
    	    		</div>
-	
-				{% if not groupe.background %}
-					<div class="list-group-item">
-	    				<h4 class="list-group-item-heading">Background</h4>
-	    				<p class="list-group-item-text">
-	    					<a href="{{ path(groupe.background.add, {'index': groupe.id}) }}">Saisir le background</a>
-	    				</p>
-	    			</div>
-				{% else %}    			
-		    		<div class="list-group-item">
-		    			<h4 class="list-group-item-heading">Background</h4>
-		    			<p class="list-group-item-text">Visible par les membres du groupe</p>
-		    			<p class="list-group-item-text">
-		    				{{ groupe.background.public|markdown }}
-		    			</p>
-		    			<p class="list-group-item-text">Visible par le chef de groupe</p>
-		    			<p class="list-group-item-text">
-		    				{{ groupe.background.owner|markdown }}
-	    				</p>
-	    				<p class="list-group-item-text">Visible uniquement par les scenaristes</p>
-		    			<p class="list-group-item-text">
-		    				{{ groupe.background.private|markdown }}
-	    				</p>
-	    					<a href="{{ path(groupe.background.update, {'index': groupe.id}) }}">Modifier le background</a>
-	    				</p>
-		    		</div>
-		    	{% endif %}
-	    			
+						
 	    		<div class="list-group-item">
 	    			<h4 class="list-group-item-heading">Territoire</h4>
 	    			
@@ -96,12 +69,37 @@
 	    			<p class="list-group-item-text">
 	    				<ul>
 	    				{% if groupe.responsable %}<li><strong>{{ groupe.responsable.username }}</strong>&nbsp;(Responsable du groupe)</li>{% endif %}
-						{% for participant in groupe.participants %}
-						<li>
-							<strong>{{ participant }} </strong>: {{ participant.user.email }}{% if is_granted('ROLE_ADMIN', app.user) %}&nbsp;<a href="{{ path('groupe.admin.participant.remove', {'groupe': groupe.id, 'participant': participant.id}) }}">Retirer</a>{% endif %}
-						</li>
-						{% endfor %}
 	    				</ul>
+	    				<table class="table">
+	    					<thead>
+	    						<tr>
+	    							<th>User</th>
+	    							<th>Email</th>
+	    							<th>Personnage</th>
+	    							{% if is_granted('ROLE_ADMIN', app.user) %}
+	    								<th></th>
+	    							{% endif %}
+	    						</tr>
+	    					</thead>
+	    					<tbody>
+							{% for participant in groupe.participants %}
+								<tr>
+									<td>{{ participant }}</td>
+									<td>{{ participant.user.email }}</td>
+									<td>
+										{% if participant.personnage %}
+											<a href="{{ path('personnage.admin.detail', {'personnage': participant.personnage.id}) }}">{{ participant.personnage.nom }}</a>
+										{% else %}
+											Ne dispose pas encore de personnage
+										{% endif %}
+									</td>
+									{% if is_granted('ROLE_ADMIN', app.user) %}
+										<td><a href="{{ path('groupe.admin.participant.remove', {'groupe': groupe.id, 'participant': participant.id}) }}">Retirer</a></td>
+									{% endif %}
+								</tr>
+							{% endfor %}
+							</tbody>
+						</table>
 	    			</p>
 	    		</div>
 	    			
@@ -167,6 +165,31 @@
 					</div>
 				</div>
   			</div>
+		</div>
+		
+		<div class="col-xs-12 col-md-6">
+			<div class="panel panel-default">
+				<div class="panel-heading">Background</div>
+				<div class="panel-body">
+					<a href="{{ path('background.add', {'groupe': groupe.id}) }}">Ajouter un élément de background</a>
+				</div>
+				<div class="list-group">
+					{% for background in groupe.backgrounds %}
+						<div class="list-group-item">
+			    			
+			    			<p class="list-group-item-text text-warning">
+			    				{{ background.visibility|explainVisibility }}
+			    			</p>
+			    			<p class="list-group-item-text">
+			    				{{ background.text|markdown }}
+			    			</p>
+			    			<p class="list-group-item-text">
+		    					<a href="{{ path('background.update', {'groupe': groupe.id, 'background': background.id, 'groupe': groupe.id}) }}">Modifier le background</a>
+		    				</p>
+			    		</div>
+					{% endfor %}
+				</div>	
+			</div>
 		</div>
 	</div>
 </div>
