ajout du plugin tinymce sur les champs descriptions de quelques objets (classes, compétences, religions, gn, groupe, groupe secondaires). Déplacement du lien "etat-civil" dans le menu "compte"

--- a/src/LarpManager/Views/admin/classe/detail.twig
+++ b/src/LarpManager/Views/admin/classe/detail.twig
@@ -24,7 +24,7 @@
     				<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
     				Attention, cette classe n'a pas de description.
     				{% else %}
-    					{{ classe.description }}
+    					{{ classe.description|markdown }}
     				{% endif %}
     				</p>
 	    		</div>
