--- a/src/LarpManager/Views/admin/classe/update.twig
+++ b/src/LarpManager/Views/admin/classe/update.twig
@@ -11,7 +11,7 @@
 			<div class="col-xs-12 col-md-8">
 			
 				<div class="well bs-component">
-					<form action="{{ path('classe.update',{'index': classe.id}) }}" method="POST" {{ form_enctype(form) }}>
+					<form action="{{ path('classe.update',{'index': classe.id}) }}" method="POST" {{ form_enctype(form) }} novalidate>
 						<fieldset>
 							<legend>Modification d'une classe</legend>
 								{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
@@ -25,3 +25,21 @@
 	</div>
 		
 {% endblock content %}
+
+{% block javascript %}
+
+	{{ parent() }}
+
+	{# inclusion du plugin tinymce pour la saisie du post #}   
+	<script src="{{ app.request.basepath }}/js/tinymce/tinymce.min.js"></script>
+
+	<script type="text/javascript">
+		tinyMCE.init({
+				mode: "textareas",
+				theme: "modern",
+				plugins : "spellchecker,insertdatetime,preview", 
+		});
+		
+	</script>
+
+{% endblock javascript %}
