--- a/src/LarpManager/Views/admin/groupeSecondaire/list.twig
+++ b/src/LarpManager/Views/admin/groupeSecondaire/list.twig
@@ -91,7 +91,7 @@
 				<tr>
 					<td><a href="{{ path('groupeSecondaire.admin.update', {'index':groupeSecondaire.id}) }}">{{ groupeSecondaire.id }}</td>
 					<td><a href="{{ path('groupeSecondaire.admin.detail', {'index':groupeSecondaire.id}) }}">{{ groupeSecondaire.label }}</td>
-					<td>{{ groupeSecondaire.description }}</td>
+					<td>{{ groupeSecondaire.description|markdown }}</td>
 					<td>{{ groupeSecondaire.secondaryGroupType.label }}</td>
 				</tr>
 			{% endfor %}
