--- a/src/LarpManager/Views/groupeSecondaire/detail_responsable.twig
+++ b/src/LarpManager/Views/groupeSecondaire/detail_responsable.twig
@@ -15,7 +15,7 @@
 			<h4>
 				{{ groupeSecondaire.label }}
 			</h4>
-			{{ groupeSecondaire.description }}
+			{{ groupeSecondaire.description|markdown }}
 		</div>
 			
 		<div class="panel panel-default">
