--- a/src/LarpManager/Views/public/classe/list.twig
+++ b/src/LarpManager/Views/public/classe/list.twig
@@ -22,7 +22,7 @@
 		    		</div>
 		    		<div class="media-body">
 		      			<h4 class="media-heading">{{ classe.label }}</h4>
-		      			<p>{{ classe.description }}</p>
+		      			<p>{{ classe.description|markdown }}</p>
 		      			<ul class="list-group">
 		      				<li class="list-group-item">
 		      					<h6 class="list-group-item-heading">Compétences acquises à la création</h6>
