--- a/src/LarpManager/Views/public/groupeSecondaire/list.twig
+++ b/src/LarpManager/Views/public/groupeSecondaire/list.twig
@@ -33,7 +33,7 @@
 							</div>
 						</h4>
 						<p class="list-group-item-text">
-							{{ groupe.description }}
+							{{ groupe.description|markdown }}
 						</p>
 					</li>
 				{% endfor %}
