--- a/src/LarpManager/Views/public/religion/list.twig
+++ b/src/LarpManager/Views/public/religion/list.twig
@@ -23,7 +23,7 @@
 			    	</div>
 			    	<div class="media-body">
 		      			<h4 class="media-heading">{{ religion.label }}</h4>
-		      			<p>{{ religion.description }}</p>
+		      			<p>{{ religion.description|markdown }}</p>
 		      		</div>
 		    	</div>
 		    </div>
