--- a/src/LarpManager/Views/admin/gn/detail.twig
+++ b/src/LarpManager/Views/admin/gn/detail.twig
@@ -24,7 +24,7 @@
     				<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
     					Attention, ce gn n'a pas de description.
     				{% else %}
-    					{{ gn.description }}
+    					{{ gn.description|markdown }}
     				{% endif %}
     				</p>
 	    		</div>
