--- a/src/LarpManager/Views/admin/gn/update.twig
+++ b/src/LarpManager/Views/admin/gn/update.twig
@@ -11,7 +11,7 @@
 	</ol>
 	
 	<div class="well bs-component">
-		<form action="{{ path('gn.update', {'index': gn.id}) }}" method="POST" {{ form_enctype(form) }}>
+		<form action="{{ path('gn.update', {'index': gn.id}) }}" method="POST" {{ form_enctype(form) }} novalidate>
 			<fieldset>
 				<legend>Modification d'un grandeur nature</legend>
 					{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
@@ -20,3 +20,21 @@
 		</form>
 	</div>
 {% endblock content %}
+
+{% block javascript %}
+
+	{{ parent() }}
+
+	{# inclusion du plugin tinymce pour la saisie du post #}   
+	<script src="{{ app.request.basepath }}/js/tinymce/tinymce.min.js"></script>
+
+	<script type="text/javascript">
+		tinyMCE.init({
+				mode: "textareas",
+				theme: "modern",
+				plugins : "spellchecker,insertdatetime,preview", 
+		});
+		
+	</script>
+
+{% endblock javascript %}
