--- a/src/LarpManager/Views/admin/groupeSecondaire/detail.twig
+++ b/src/LarpManager/Views/admin/groupeSecondaire/detail.twig
@@ -22,7 +22,7 @@
 		<div class="panel-body">
 			<div class="list-group">
 				<div class="list-group-item">
-					<p>{{ groupeSecondaire.description }}</p>
+					<p>{{ groupeSecondaire.description|markdown }}</p>
 				</div>
 				<div class="list-group-item">
 					<div class="list-group-item-heading">
