--- a/src/LarpManager/Views/competenceFamily/fragment/form.twig
+++ b/src/LarpManager/Views/competenceFamily/fragment/form.twig
@@ -1,5 +1,5 @@
 <div class="well bs-component">
-	<form action="{{ action }}" method="POST" {{ form_enctype(form) }}>
+	<form action="{{ action }}" method="POST" {{ form_enctype(form) }} novalidate>
 		<fieldset>
 			<legend>{{ legend }}</legend>
 				{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
