Création de la méthode publicName pour afficher le surnom d'un personnage lorsque celui-ci est disponible (dans le cas contraire, on affiche le nom). Utilisation de cette méthode dans les vues affichant le nom du personnage.

--- a/src/LarpManager/Views/admin/groupe/detail.twig
+++ b/src/LarpManager/Views/admin/groupe/detail.twig
@@ -88,7 +88,7 @@
 									<td>{{ participant.user.email }}</td>
 									<td>
 										{% if participant.personnage %}
-											<a href="{{ path('personnage.admin.detail', {'personnage': participant.personnage.id}) }}">{{ participant.personnage.nom }}</a>
+											<a href="{{ path('personnage.admin.detail', {'personnage': participant.personnage.id}) }}">{{ participant.personnage.publicName }}</a>
 										{% else %}
 											Ne dispose pas encore de personnage
 										{% endif %}
