--- a/src/LarpManager/Views/admin/personnage/update.twig
+++ b/src/LarpManager/Views/admin/personnage/update.twig
@@ -7,13 +7,13 @@
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage') }}">Accueil</a></li>
 		<li><a href="{{ path('personnage.admin.list') }}">Liste des personnages</a></li>
-		<li class="active">Modification de {{ personnage.nom }}</li>
+		<li class="active">Modification de {{ personnage.publicName }}</li>
 	</ol>
 
 	<div class="well bs-component">	
 		<form action="{{ path('personnage.admin.update', {'personnage': personnage.id}) }}" method="POST" {{ form_enctype(form) }}>
 			<fieldset>
-				<legend>Modification de {{ personnage.nom }}</legend>
+				<legend>Modification de {{ personnage.publicName }}</legend>
 				{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
 	
 				{{ form_row(form.nom) }}
