--- a/src/LarpManager/Views/admin/personnage/xp.twig
+++ b/src/LarpManager/Views/admin/personnage/xp.twig
@@ -7,7 +7,7 @@
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage') }}">Accueil</a></li>
 		<li><a href="{{ path('personnage.admin.list') }}">Liste des personnages</a></li>
-		<li class="active">Modification de {{ personnage.nom }}</li>
+		<li class="active">Modification de {{ personnage.publicName }}</li>
 	</ol>
 	
 	<div class="well bs-component">
