--- a/src/LarpManager/Views/personnage/fragment/media.twig
+++ b/src/LarpManager/Views/personnage/fragment/media.twig
@@ -3,7 +3,7 @@
 		<a href="#"><img class="media-object" src="" alt="" /></a>
 	</div>
 	<div class="media-body">
-		<h4 class="media-heading">{{ personnage.nom }}</h4>
+		<h4 class="media-heading">{{ personnage.publicName }}</h4>
 		Membre de : {{ personnage.groupe.nom }}
 		Joué par : {{ personnage.user.name }}
 	</div>
