--- a/src/LarpManager/Views/homepage/fragment/personnage.twig
+++ b/src/LarpManager/Views/homepage/fragment/personnage.twig
@@ -1,5 +1,5 @@
 <div class="panel panel-success">
-	<div class="panel-heading">{{ personnage.nom }} - <small>{{ personnage.classe.label }}</small></div>
+	<div class="panel-heading">{{ personnage.publicName }} - <small>{{ personnage.classe.label }}</small></div>
 	<div class="panel-body">
 		<div class="list-group">
 			<div class="list-group-item">
