--- a/src/LarpManager/Views/personnage/competence.twig
+++ b/src/LarpManager/Views/personnage/competence.twig
@@ -1,6 +1,6 @@
 {% extends "layout.twig" %}
 
-{% block title %}{{ personnage.nom }}{% endblock title %}
+{% block title %}{{ personnage.publicName }}{% endblock title %}
 
 {% block content %}
 
@@ -14,7 +14,7 @@
 	<div class="well bs-component">
 		<form action="{{ path('personnage.competence.add',{'personnage':personnage.id}) }}" method="POST" {{ form_enctype(form) }}>
 			<fieldset>
-				<legend>{{ personnage.nom }} - <small>Achat d'une compétence</small></legend>
+				<legend>{{ personnage.publicName }} - <small>Achat d'une compétence</small></legend>
 				
 				<ul class="list-group">
 					<li class="list-group-item">Vous disposez de <strong>{{ personnage.xp }}</strong> Points d'expériences.</li>
