--- a/src/LarpManager/Views/personnage/fragment/list.twig
+++ b/src/LarpManager/Views/personnage/fragment/list.twig
@@ -4,7 +4,7 @@
 	<li class="list-group-item">
 		
 		<h4 class="list-group-item-heading">
-			{{ personnage.nom }}
+			{{ personnage.publicName }}
 			<div class="pull-right btn-group" role="group" aria-label="...">
 				<a href="{{ path('joueur.detail.orga', {index: personnage.id}) }}" class="btn btn-primary" role="button">Voir</a>
 			    <a href="{{ path('joueur.update', {index: personnage.id}) }}" class="btn btn-default" role="button">Modifier</a>
