Possibilité de créer des groupes de pnj + quelques corrections de bugs.

--- a/src/LarpManager/Views/admin/groupe/add.twig
+++ b/src/LarpManager/Views/admin/groupe/add.twig
@@ -22,6 +22,7 @@
 						</div>
 						<div class="panel-body">
 							{{ form_row(form.nom) }}
+							{{ form_row(form.pj) }}
 							{{ form_row(form.description) }}
 							{{ form_row(form.territoire) }}
 						</div>
