--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -91,6 +91,7 @@
 						<li><a href="{{ path('classe.list') }}">Les classes</a></li>
 						<li><a href="{{ path('groupeSecondaire.list') }}">Les groupes secondaires</a></li>
 						<li><a href="{{ path('religion.list') }}">Les religions</a></li>
+						<li><a href="{{ path('pnj.inscription') }}">Personnage non-joueur</a></li>
 					</ul
 				</li>
 			{% endif %}
