Corrections de bugs.

--- a/src/LarpManager/Views/forum/topic.twig
+++ b/src/LarpManager/Views/forum/topic.twig
@@ -20,7 +20,7 @@
 			
 			<div class="well well-sm">
 				<h6>{{ topic.title }}</h6>
-				{{ topic.description }}
+				{{ topic.description|markdown }}
 			</div>
 			<div class="panel panel-default">
 				<div class="panel-heading">
