--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -109,6 +109,7 @@
 						<li><a href="{{ path('user.login') }}">Connection</a></li>
 						<li><a href="{{ path('user.register') }}">S'enregistrer</a></li>
 					{%  endif %}
+					<li><a href="{{ path('legal') }}">Mentions légales</a></li>
 				</ul>
 			</li>	
 						
