--- a/src/LarpManager/Views/public/user/etatCivil.twig
+++ b/src/LarpManager/Views/public/user/etatCivil.twig
@@ -12,7 +12,10 @@
 			<li class="active">Mon état-civil</li>
 		</ol>
 		
-		
+		<div class="well">
+			Consulter les <a href="{{ path('legal') }}">mentions légales</a>.
+		</div>
+	
 		<div class="panel panel-default">
 			<div class="panel-heading">
 				<h4 class="list-group-item-heading">
