Modification et supression d'un personnage.

--- a/src/LarpManager/Views/admin/personnage/list.twig
+++ b/src/LarpManager/Views/admin/personnage/list.twig
@@ -93,8 +93,8 @@
 		<tbody>
 			{% for personnage in personnages %}
 				<tr>
-					<td><a href="{{ path('personnage.admin.update', {'personnage':personnage.id}) }}">{{ personnage.id }}</td>
-					<td><a href="{{ path('personnage.admin.detail', {'personnage':personnage.id}) }}">{{ personnage.publicName }}</td>
+					<td>{{ personnage.id }}</td>
+					<td><a href="{{ path('personnage.admin.detail', {'personnage':personnage.id}) }}">{{ personnage.publicName }}</a></td>
 					<td>{{ personnage.classe }}</td>
 					<td>{{ personnage.groupe }}</td>
 					<td>{{ personnage.participant }}</td>
