--- a/src/LarpManager/Views/homepage/fragment/personnage.twig
+++ b/src/LarpManager/Views/homepage/fragment/personnage.twig
@@ -20,6 +20,9 @@
 						Ne participe pas aux intrigues
 					{% endif %}
 				</p>
+				<p class="list-group-item-text">
+					<a href="{{ path('personnage.update', {'personnage':personnage.id}) }}">Modifier</a>
+				</p>
 			</div>
 			<div class="list-group-item">
 				<h6 class="list-group-item-heading">Religion</h6>
