--- a/src/LarpManager/Views/admin/personnage/detail.twig
+++ b/src/LarpManager/Views/admin/personnage/detail.twig
@@ -49,6 +49,9 @@
 							Ne participe pas aux intrigues
 						{% endif %}
 					</p>
+					<p class="list-group-item-text">
+						<a href="{{ path('personnage.admin.update', {'personnage':personnage.id}) }}">Modifier</a>
+					</p>
 				</div>
 				<div class="list-group-item">
 					<h6 class="list-group-item-heading">Religion</h6>
