Corrections de bugs, ajout de l'origine pour les personnages, ajout des forums par territoire et droits liés à ces nouveaux forums.

--- a/src/LarpManager/Views/groupe/personnage_add.twig
+++ b/src/LarpManager/Views/groupe/personnage_add.twig
@@ -14,6 +14,7 @@
 			{{ form_row(form.surnom) }}
 			{{ form_row(form.age) }}
 			{{ form_row(form.genre) }}
+			{{ form_row(form.territoire) }}
 			{{ form_row(form.intrigue) }}
 			{{ form_row(form.classe) }}
 			
