--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -43,6 +43,7 @@
 						<li><a href="{{ path('ressource') }}">Ressources</a></li>
 						<li><a href="{{ path('religion') }}">Religions</a></li>
 						<li><a href="{{ path('religion.level') }}">Fanatisme</a></li>
+						<li><a href="{{ path('personnageSecondaire') }}">Personnage secondaire</a></li>
 						<li><a href="{{ path('statistique') }}">Statistiques</a></li>
 						<li><a href="{{ path('background.list') }}">Backgrounds</a></li>
 					</ul>
